kubectl/dev/ui-service/ui-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
  namespace: prj-deployment-mgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-service
  template:
    metadata:
      labels:
        app: ui-service
    spec:
      containers:
      - name: ui-service
        image: "418272754610.dkr.ecr.ap-southeast-1.amazonaws.com/deployment-mgmt-dev-ui-service-ecr:v1.0.0"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: prj-deployment-mgmt
spec:
  type: LoadBalancer
  selector:
    app: ui-service
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
