kubectl/dev/ui-service/ingress-ui-service.yml
#this file has been misconfigured, please do not use
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-service-ingress
  namespace: prj-deployment-mgmt
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-arn: "arn:aws:elasticloadbalancing:ap-southeast-1:774305578623:loadbalancer/app/deployment-mgmt-dev-public-lb/69e77dcc18bd183e"
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
